--- a/app/templates/projects/project_detail.html
+++ b/app/templates/projects/project_detail.html
@@ -1,5 +1,5 @@
 {% extends "pages/page.html" %}
-{% load mezzanine_tags keyword_tags i18n organization_tags %}
+{% load mezzanine_tags keyword_tags i18n organization_tags pages_tags %}
 
 {% block meta_title %}{{ project.meta_title }}{% endblock %}
 
@@ -15,6 +15,10 @@
     project
 {% endblock %}
 
+{% block body_class %}
+    pattern pattern-bg {{ department.pages.all.0.weaving_css_class }}
+{% endblock %}
+
 {% block breadcrumb_menu %}
 
     {{ block.super }}
@@ -22,8 +26,10 @@
     {% if department %}
         <li class="breadcrumb__item"><a class="breadcrumb__link" href="{{ department.pages.all.0.get_absolute_url }}">{{ department.name }}</a></li>
     {% endif %}
-    {% if project.topic %}
-        <li class="breadcrumb__item"><a class="breadcrumb__link" href="{{ project.topic.parent.pages.all.0.get_absolute_url }}">{{ project.topic.name }}</a></li>
+    {% if project.topic and project.topic.parent %}
+        <li class="breadcrumb__item"><a class="breadcrumb__link" href="{{ project.topic.parent.pages.all.0.get_absolute_url }}">{{ project.topic.parent }}</a></li>
+    {% elif project.topic %}
+        <li class="breadcrumb__item"><a class="breadcrumb__link" href="{{ project.topic.pages.all.0.get_absolute_url }}">{{ project.topic }}</a></li>
     {% endif %}
 
     <li class="breadcrumb__item active">{{ project.title }}</li>
@@ -52,6 +58,14 @@
         {{ project.content|richtext_filters|safe }}
     {% endif %}
 
+{% endblock %}
+
+{% block page_sidebar %}
+    {% if project.topic and project.topic.parent %}
+        {% page_menu "pages/menus/current_tree_secondary.html" project.topic.parent.pages.all.0 %}
+    {% elif project.topic %}
+        {% page_menu "pages/menus/current_tree_secondary.html" project.topic.pages.all.0 %}
+    {% endif %}
 {% endblock %}
 
 {% block page_link %}
@@ -87,140 +101,136 @@
 {% endblock %}
 
 {% block page_sub_content %}
-    {% with project.blocks.all as blocks %}
-        {% include "core/inc/block.html" %}
-    {% endwith %}
-{% endblock %}
-
-
-{% block page_related_content %}
 
     {% if project.type == 'external project' %}
-        <div class="page__block page__block--yellow">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 col-lg-10 col-lg-push-1">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <div class="project-details">
-                                    <h3 class="dotted project-details__title">{% trans "Project details" %}</h3>
+        <div class="white-bg pb2">
+            <hr class="mt0" />
+            <div class="page__block page__block--yellow">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-12 col-lg-10 col-lg-push-1">
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="project-details">
+                                        <h3 class="dotted project-details__title">{% trans "Project details" %}</h3>
 
-                                    <div>
-                                        {% if project.program %}
+                                        <div>
+                                            {% if project.program %}
+                                                <div class="project-details__item">
+                                                    <div class="project-details__item-title">
+                                                        {% trans "Program" %}
+                                                    </div>
+                                                    <div class="project-details__item-desc">
+                                                        {{ project.program }}
+                                                    </div>
+                                                </div>
+                                            {% endif %}
+
+                                            {% if project.program_type %}
+                                                <div class="project-details__item">
+                                                    <div class="project-details__item-title">
+                                                        {% trans "Program type" %}
+                                                    </div>
+                                                    <div class="project-details__item-desc">
+                                                        {{ project.program_type }}
+                                                    </div>
+                                                </div>
+                                            {% endif %}
+
                                             <div class="project-details__item">
                                                 <div class="project-details__item-title">
-                                                    {% trans "Program" %}
+                                                    {% trans "Beginning" %}
                                                 </div>
                                                 <div class="project-details__item-desc">
-                                                    {{ project.program }}
+                                                    {{ project.date_from }}
                                                 </div>
                                             </div>
-                                        {% endif %}
 
-                                        {% if project.program_type %}
                                             <div class="project-details__item">
                                                 <div class="project-details__item-title">
-                                                    {% trans "Program type" %}
+                                                    {% trans "End" %}
                                                 </div>
                                                 <div class="project-details__item-desc">
-                                                    {{ project.program_type }}
+                                                    {{ project.date_to }}
                                                 </div>
                                             </div>
-                                        {% endif %}
 
-                                        <div class="project-details__item">
-                                            <div class="project-details__item-title">
-                                                {% trans "Beginning" %}
-                                            </div>
-                                            <div class="project-details__item-desc">
-                                                {{ project.date_from }}
-                                            </div>
-                                        </div>
-
-                                        <div class="project-details__item">
-                                            <div class="project-details__item-title">
-                                                {% trans "End" %}
-                                            </div>
-                                            <div class="project-details__item-desc">
-                                                {{ project.date_to }}
-                                            </div>
-                                        </div>
-
-                                        <div class="project-details__item">
-                                            <div class="project-details__item-title">
-                                                {% trans "Status" %}
-                                            </div>
-                                            <div class="project-details__item-desc">
-                                                {{ project.project_status }}
-                                            </div>
-                                        </div>
-
-                                        {% if project.website %}
                                             <div class="project-details__item">
                                                 <div class="project-details__item-title">
-                                                    {% trans "Website" %}
+                                                    {% trans "Status" %}
                                                 </div>
                                                 <div class="project-details__item-desc">
-                                                    <a href="{{ project.website }}" target="_blank" title="{{ project.title }}">{{ project.website }}</a>
+                                                    {{ project.project_status }}
                                                 </div>
                                             </div>
-                                        {% endif %}
 
-                                        <div class="project-details__logo">
-                                            {% with project.images.all|get_type:'logo' as images %}
-                                                {% include 'core/inc/logo.html' %}
-                                            {% endwith %}
+                                            {% if project.website %}
+                                                <div class="project-details__item">
+                                                    <div class="project-details__item-title">
+                                                        {% trans "Website" %}
+                                                    </div>
+                                                    <div class="project-details__item-desc">
+                                                        <a href="{{ project.website }}" target="_blank" title="{{ project.title }}">{{ project.website }}</a>
+                                                    </div>
+                                                </div>
+                                            {% endif %}
+
+                                            <div class="project-details__logo">
+                                                {% with project.images.all|get_type:'logo' as images %}
+                                                    {% include 'core/inc/logo.html' %}
+                                                {% endwith %}
+                                            </div>
+
                                         </div>
-
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="project-details">
-                                    <h3 class="dotted project-details__title">{% trans "Participants" %}</h3>
+                                <div class="col-sm-6">
+                                    <div class="project-details">
+                                        <h3 class="dotted project-details__title">{% trans "Participants" %}</h3>
 
-                                    <div>
+                                        <div>
 
-                                        {% if project.lead_team %}
+                                            {% if project.lead_team %}
+                                                <div class="project-details__item">
+                                                  {% if project.lead_team %}
+                                                    <div class="project-details__item-title">
+                                                        {% trans "Project lead team" %}
+                                                    </div>
+                                                    <div class="project-details__item-desc">
+                                                        {{ project.lead_team }}
+                                                    </div>
+                                                  {% elif project.lead_organization %}
+                                                    <div class="project-details__item-title">
+                                                        {% trans "Project lead organization" %}
+                                                    </div>
+                                                    <div class="project-details__item-desc">
+                                                        {{ project.lead_organization }}
+                                                    </div>
+                                                  {% endif %}
+                                                </div>
+                                            {% endif %}
+
                                             <div class="project-details__item">
-                                              {% if project.lead_team %}
                                                 <div class="project-details__item-title">
-                                                    {% trans "Project lead team" %}
+                                                    {% trans "Partners" %}
                                                 </div>
                                                 <div class="project-details__item-desc">
-                                                    {{ project.lead_team }}
+                                                    {% for team in project.teams.all %}
+                                                        {{ team }}<br>
+                                                    {% endfor %}
+                                                    {% for organization in project.organizations.all %}
+                                                        {% if organization.url %}
+                                                            <a href="{{organisation.url}}" target="_blank" title="{{organisation}}">
+                                                        {% endif %}
+                                                        {{ organization }}<br>
+                                                        {% if organization.url %}
+                                                            </a>
+                                                        {% endif %}
+                                                    {% endfor %}
                                                 </div>
-                                              {% elif project.lead_organization %}
-                                                <div class="project-details__item-title">
-                                                    {% trans "Project lead organization" %}
-                                                </div>
-                                                <div class="project-details__item-desc">
-                                                    {{ project.lead_organization }}
-                                                </div>
-                                              {% endif %}
                                             </div>
-                                        {% endif %}
 
-                                        <div class="project-details__item">
-                                            <div class="project-details__item-title">
-                                                {% trans "Partners" %}
-                                            </div>
-                                            <div class="project-details__item-desc">
-                                                {% for team in project.teams.all %}
-                                                    {{ team }}<br>
-                                                {% endfor %}
-                                                {% for organization in project.organizations.all %}
-                                                    {% if organization.url %}
-                                                        <a href="{{organisation.url}}" target="_blank" title="{{organisation}}">
-                                                    {% endif %}
-                                                    {{ organization }}<br>
-                                                    {% if organization.url %}
-                                                        </a>
-                                                    {% endif %}
-                                                {% endfor %}
-                                            </div>
                                         </div>
-
                                     </div>
                                 </div>
                             </div>
@@ -231,7 +241,11 @@
         </div>
     {% endif %}
 
+    {% with project.blocks.all as blocks %}
+        {% include "core/inc/block.html" %}
+    {% endwith %}
 {% endblock %}
+
 
 {% block logo %}
     {% if project.organizations.all|length > 0 %}
