--- a/static/src/sass/modules/_page.scss
+++ b/static/src/sass/modules/_page.scss
@@ -97,29 +97,13 @@ $module: ".page";
 
         		position: relative;
         		z-index: 1;
-        		text-decoration: none;
+        		text-decoration: underline;
                 @include transition(all 0.15s ease-in-out);
 
         		&:after {
-        			@include transition(all 0.15s ease-in-out);
-        			content: "";
-        			display: block;
-        			position: absolute;
-        			left: 0;
-        			right: 0;
-        			bottom: 0;
-        			height: 1px;
-        			background: $color-black;
-        			z-index: -1;
+        			display: none;
         		}
 
-        		&:hover {
-        			&:after {
-        				bottom: 0;
-        				background: $color-black;
-        				height: 1px;
-        			}
-        		}
         	}
 
         }
@@ -137,30 +121,13 @@ $module: ".page";
                 color: white;
         		position: relative;
         		z-index: 1;
-        		text-decoration: none;
+        		text-decoration: underline;
                 @include transition(all 0.15s ease-in-out);
 
         		&:after {
-        			@include transition(all 0.15s ease-in-out);
-        			content: "";
-        			display: block;
-        			position: absolute;
-        			left: 0;
-        			right: 0;
-        			bottom: 0;
-        			height: 1px;
-        			background: white;
-        			z-index: -1;
+        			display: none;
         		}
 
-        		&:hover {
-                    color: $color-main;
-        			&:after {
-        				bottom: 0;;
-                        background: $color-main;
-        				height: 1px;
-        			}
-        		}
         	}
 
             h2:first-child {
