--- a/templates/pages/menus/current_tree_secondary.html
+++ b/templates/pages/menus/current_tree_secondary.html
@@ -18,8 +18,7 @@
                 {% endif %}
             {% endif %}
         {% endfor %}
-    {% endif %}
-    {% if branch_level == 1 %}
+    {% elif branch_level == 1 %}
         {% for page in page_branch %}
             {% if page.is_current_or_ascendant and page.has_children_in_menu %}
                 <li class="nav-tree__item">
@@ -33,8 +32,7 @@
                 </ul>
             {% endif %}
         {% endfor %}
-    {% endif %}
-    {% if branch_level == 2 %}
+    {% elif branch_level == 2 %}
         {% for page in page_branch %}
             <li class="nav-tree__item">
                 <a class="nav-tree__link{% if page.is_current or page.is_current_or_ascendant %} active{% endif %}" href="{{ page.get_absolute_url }}">{{ page.title }}</a>
