--- a/app/templates/projects/project_detail.html
+++ b/app/templates/projects/project_detail.html
@@ -27,8 +27,10 @@
         <li class="breadcrumb__item"><a class="breadcrumb__link" href="{{ department.pages.all.0.get_absolute_url }}">{{ department.name }}</a></li>
     {% endif %}
     {% if project.topic and project.topic.parent %}
+        <li class="breadcrumb__item"><a class="breadcrumb__link" href="{{ project.topic.parent.pages.all.0.get_ascendants.0.get_absolute_url }}">{{ project.topic.parent.pages.all.0.get_ascendants.0.title }}</a></li>
         <li class="breadcrumb__item"><a class="breadcrumb__link" href="{{ project.topic.parent.pages.all.0.get_absolute_url }}">{{ project.topic.parent }}</a></li>
     {% elif project.topic %}
+        <li class="breadcrumb__item"><a class="breadcrumb__link" href="{{ project.topic.pages.all.0.get_ascendants.0.get_absolute_url }}">{{ project.topic.pages.all.0.get_ascendants.0.title }}</a></li>
         <li class="breadcrumb__item"><a class="breadcrumb__link" href="{{ project.topic.pages.all.0.get_absolute_url }}">{{ project.topic }}</a></li>
     {% endif %}
 
